<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="bottom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_rec_view_cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_view"
        >
        <TextView
            app:layout_constraintBottom_toTopOf="@id/home_rec_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textLight"
            android:text="@string/home"
            android:layout_gravity="top"
            android:id="@+id/home_header"
            android:layout_marginVertical="10sp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="24sp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginHorizontal="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_view"
            android:layout_marginBottom="5sp"
            android:scrollbars="vertical"
            android:id="@+id/home_rec_view"
            app:layout_constraintBottom_toTopOf="@id/button_view"
            app:layout_constraintTop_toBottomOf="@id/home_header"
            />
    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/button_view"
        android:background="@drawable/rect_view"
        android:layout_marginHorizontal="10sp"
        android:layout_marginBottom="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <Button
            android:text="@string/home_button_camera"
            android:id="@+id/button_camera"
            style="@style/button_h"
            android:drawableRight="@drawable/ic_camera_alt_black_24dp"
            android:onClick="camera"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintHorizontal_bias="0.20"
            />

        <Button
            android:id="@+id/button_galley"
            android:text="@string/home_button_galley"
            style="@style/button_h"
            android:drawableRight="@drawable/ic_image_black_24dp"
            android:onClick="gallery"
            android:layout_marginBottom="20sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.80"
            app:layout_constraintVertical_bias="1"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>